--- a/styles/all.css
+++ b/styles/all.css
@@ -58,7 +58,10 @@ body {
     text-align: left;
     letter-spacing: 1px; 
     font-size: 20px;
+    width: 400px;
+    margin: 0px;
   }
+
 
   p.start{
     font-family: 'EB Garamond', serif;
@@ -69,10 +72,20 @@ body {
 
   section{
     margin: 20px 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   div.index{
       margin-top:200px;
+      width: 50%;
+  }
+
+  div.indexvideo{
+      margin-top:0px;
+      width:50%;
+      justify-content: center;
   }
 
   div.start{
@@ -221,3 +234,20 @@ a.button{
     transition-duration: .3s;
     transition-timing-function: ease-out;
 }
+
+#videosList {
+    max-width: 330px; 
+     overflow: hidden;
+   }
+   
+   .video {
+     background-image: url('../images/fountain.png'); 
+     height: 580px;
+     width: 330px;
+     margin-bottom: 50px;
+   }
+   
+   /* Hide Play button + controls on iOS */
+   video::-webkit-media-controls {
+       display:none !important;
+   }
